results/SVCOMP/4-shot/log-Divs32-2024_03_18_14_17_29.txt
public class Divs32 {

  static final int MAX_INT = 2147483647;
  static final int MIN_INT = -2147483648;

  //@ requires denominator != 0;
  //@ ensures \result == numerator / denominator;
  //@ ensures \result == MAX_INT && numerator >= 0 && denominator == 0;
  //@ ensures \result == MIN_INT && numerator < 0 && denominator == 0;
  //@ ensures \result == numerator / denominator && ((numerator < 0 && denominator > 0) || (numerator > 0 && denominator < 0));
  public static int divS32(int numerator, int denominator) {
    int quotient;
    int tempAbsQuotient;
    boolean quotientNeedsNegation = false;
    if (denominator == 0) {
      quotient = numerator >= 0 ? MAX_INT : MIN_INT;

      /* Divide by zero handler */
    } else {
      // quotientNeedsNegation = ((numerator < 0) != (denominator < 0));

      if ((numerator < 0) && (denominator > 0)) quotientNeedsNegation = true;
      else if ((numerator > 0) && (denominator < 0)) quotientNeedsNegation = true;
      else quotientNeedsNegation = false;

      int calcDenominator;

      /* replacing this computation
      tempAbsQuotient = (int) (numerator >= 0 ? numerator : -numerator) /
              (denominator >= 0 ? denominator : -denominator);*/

      if (denominator >= 0) calcDenominator = denominator;
      else calcDenominator = -denominator;

      tempAbsQuotient = (int) (numerator >= 0 ? numerator : -numerator) / calcDenominator;
      quotient = quotientNeedsNegation ? -(int) tempAbsQuotient : (int) tempAbsQuotient;
    }

    return quotient;
  }
}
/home/max/Documents/JMLGPT/tmp/Divs32.java:8: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == MAX_INT && numerator >= 0 && denominator == 0;
                         ^
/home/max/Documents/JMLGPT/tmp/Divs32.java:9: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == MIN_INT && numerator < 0 && denominator == 0;
                         ^
2 errors

